--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,15 +9,15 @@ import Paragraph from "../components/Paragraph.astro";
     <article>
         <slot>
             <Paragraph
-                    title="Czym jest Algodebug"
+                    title="Czym jest AlgoJudge."
                     content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor bibendum lacus, quis condimentum nisl. Aenean at ipsum tristique ex interdum rhoncus. Nam lectus mauris, aliquam vel imperdiet vel, venenatis quis odio. Quisque venenatis ex vitae imperdiet volutpat. Vestibulum eu auctor erat, sagittis aliquam nisl. In tincidunt sit amet quam vel condimentum. Donec in convallis orci. Pellentesque molestie nisi bibendum ex facilisis, id suscipit enim sollicitudin. Nullam lobortis pharetra lacus et luctus. Ut sit amet mi dui. Cras vel velit mauris. Aenean posuere auctor euismod. Aliquam at purus efficitur, bibendum tortor vitae, finibus mi. Aenean placerat lectus et viverra gravida. Cras vulputate faucibus efficitur. Ut porta, eros eget vestibulum imperdiet, ex libero ultrices nisi, a porta dolor nisi sit amet nisl.ry"
             />
             <Paragraph
-                    title="Czym jest Algodebug"
+                    title="Co umożliwi projekt AlgoJudge."
                     content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor bibendum lacus, quis condimentum nisl. Aenean at ipsum tristique ex interdum rhoncus. Nam lectus mauris, aliquam vel imperdiet vel, venenatis quis odio. Quisque venenatis ex vitae imperdiet volutpat. Vestibulum eu auctor erat, sagittis aliquam nisl. In tincidunt sit amet quam vel condimentum. Donec in convallis orci. Pellentesque molestie nisi bibendum ex facilisis, id suscipit enim sollicitudin. Nullam lobortis pharetra lacus et luctus. Ut sit amet mi dui. Cras vel velit mauris. Aenean posuere auctor euismod. Aliquam at purus efficitur, bibendum tortor vitae, finibus mi. Aenean placerat lectus et viverra gravida. Cras vulputate faucibus efficitur. Ut porta, eros eget vestibulum imperdiet, ex libero ultrices nisi, a porta dolor nisi sit amet nisl."
             />
             <Paragraph
-                    title="Czym jest Algodebug"
+                    title="O twórcach AlgoJudge."
                     content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor bibendum lacus, quis condimentum nisl. Aenean at ipsum tristique ex interdum rhoncus. Nam lectus mauris, aliquam vel imperdiet vel, venenatis quis odio. Quisque venenatis ex vitae imperdiet volutpat. Vestibulum eu auctor erat, sagittis aliquam nisl. In tincidunt sit amet quam vel condimentum. Donec in convallis orci. Pellentesque molestie nisi bibendum ex facilisis, id suscipit enim sollicitudin. Nullam lobortis pharetra lacus et luctus. Ut sit amet mi dui. Cras vel velit mauris. Aenean posuere auctor euismod. Aliquam at purus efficitur, bibendum tortor vitae, finibus mi. Aenean placerat lectus et viverra gravida. Cras vulputate faucibus efficitur. Ut porta, eros eget vestibulum imperdiet, ex libero ultrices nisi, a porta dolor nisi sit amet nisl."
             />
         </slot>
