--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,9 +13,8 @@ const {title} = Astro.props;
     <meta charset="UTF-8">
     <title>{title}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap"
-          rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -26,7 +25,7 @@ const {title} = Astro.props;
 
 <style lang="scss">
   * {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
   }
 
   body {
