--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import CreatedBy from "../components/CreatedBy.astro";
   <article>
     <slot>
       <Paragraph
-        title="Czym jest AlgoJudge."
+        title="Czym będzie AlgoJudge."
         content="AlgoJudge będzie innowacyjną platformą algorytmiczna oparta na ASP.NET. Będzie pozwalała ona na sprawdzanie zadań w C, C++, Pythonie i innych językach programowania które zostaną określone w późniejszym etapie prac oraz organizowanie turniejów algorytmicznych. Korzysta z najnowszych technologii, oferuje intuicyjny interfejs użytkownika."
       />
       <Paragraph
