--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,15 @@ import CreatedBy from "../components/CreatedBy.astro";
     <slot>
       <Paragraph
         title="Czym będzie AlgoJudge."
-        content="AlgoJudge będzie innowacyjną platformą algorytmiczna oparta na ASP.NET. Będzie pozwalała ona na sprawdzanie zadań w C, C++, Pythonie i innych językach programowania które zostaną określone w późniejszym etapie prac oraz organizowanie turniejów algorytmicznych. Korzysta z najnowszych technologii, oferuje intuicyjny interfejs użytkownika."
+        content="AlgoJudge będzie innowacyjną platformą algorytmiczna oparta na ASP.NET. Będzie pozwalała ona na sprawdzanie zadań w C, C++, Pythonie i innych językach programowania które zostaną określone w późniejszym etapie prac oraz organizowanie turniejów algorytmicznych. Będzie korzystała z najnowszych technologii oraz będzie miała intuicyjny interfejs użytkownika."
       />
       <Paragraph
         title="Co umożliwi projekt AlgoJudge."
-        content="Dzięki projektowi AlgoJudge, szybkie i niezawodne sprawdzanie zadań stanie się rzeczywistością. Platforma ta będzie stanowiła odciążenie dla nauczycieli akademickich, umożliwiając im skuteczne weryfikowanie rozwiązań zadań. Dodatkowo, dla studentów AlgoJudge będzie przyjemnym sposobem na wysyłanie zadań, zapewniając szybką i klarowną ocenę ich pracy.<br>Integracja z systemem Moodle zapewni płynne działanie platformy w środowisku edukacyjnym, ułatwiając zarządzanie kursami i zadaniami. Dzięki temu studenci i nauczyciele będą mieli łatwy dostęp do zasobów AlgoJudge bez konieczności przełączania się między różnymi aplikacjami."
+        content="Dzięki projektowi AlgoJudge, szybkie i niezawodne sprawdzanie zadań stanie się rzeczywistością. Platforma ta będzie stanowiła odciążenie dla nauczycieli akademickich, umożliwiając im skuteczne weryfikowanie rozwiązań zadań. Dodatkowo, dla studentów AlgoJudge będzie przyjemnym sposobem na wysyłanie zadań, zapewniając szybką i klarowną ocenę ich pracy."
+      />
+      <Paragraph
+        title=""
+        content="Integracja z systemem Moodle zapewni płynne działanie platformy w środowisku edukacyjnym, ułatwiając zarządzanie kursami i zadaniami. Dzięki temu studenci i nauczyciele będą mieli łatwy dostęp do zasobów AlgoJudge bez konieczności przełączania się między różnymi aplikacjami."
       />
       <Paragraph
         title="O twórcach AlgoJudge."
